--- a/server/.env
+++ b/server/.env
@@ -2,6 +2,7 @@
 NODE_ENV=development
 PORT=3000
 CLIENT_URL=http://localhost:5173
+GEMINI_API_KEY=AIzaSyBLih7DG7gN9Gd-0G9Ue9a7z8eGtRqJWs0
 
 # Database
 MONGODB_URI=mongodb+srv://utkarsh2023:pUvq2gxiFpyjqV8g@cluster0.0ngwpyi.mongodb.net/
